Fix tag issue and format

--- a/_posts/2017-05-15-my-story.md
+++ b/_posts/2017-05-15-my-story.md
@@ -4,7 +4,7 @@ date: 2017-05-15
 author: Claudia 
 layout: post
 image: '/images/posts/main/my-story.jpg'
-tags: [Personal]
+tags: personal
 ---
 
 If you would have asked me what do I do four years ago, I would have said something like *“I’m a chemical engineer, I work with users of radioactive material, helping them to ensure safety in the transport of such materials.  I’m also learning about nuclear security, and I’m very excited about the idea of applying what I know about processes and quality management in any nuclear facility.”*
