Fix posts aesthetics (all changes in new custom CSS). Add new images to posts

--- a/_posts/2018-05-31-mid-year.md
+++ b/_posts/2018-05-31-mid-year.md
@@ -9,25 +9,27 @@ tags: [challenge]
 
 > "You’re in the middle of an interesting online course. You just started reading a fascinating new book. You stayed up all night watching a series of talks by a provocative lecturer. Nobody knows. It’s a secret between you and your brain."
 > 
-> <cite>T.K. - [Three reasons why you should learn out loud"](http://discoverpraxis.com/3-reasons-learn-loud/)</cite>
+> T.K. - [Three reasons why you should learn out loud"](http://discoverpraxis.com/3-reasons-learn-loud/)
 
 ## Catching up
 
-Almost 6 months ago, I started working as a data analyst in a marketing engineering agency.
+Almost six months ago, I started working as a data analyst for a marketing engineering agency.
 
-The first couple of weeks were somehow slow.  I started working mid-December, and three-quarters of the staff were on vacations, even the clients were taking time off.  During those first weeks, I spent about 8 hours a day reading and watching videos, learning and taking exams.  I got Google Analytics certified, Google AdWords certified, and I took courses on Facebook Advertisement and Search Engine Optimization.
+The first couple of weeks were somehow slow.  I started working mid-December, and three-quarters of the staff were on vacations, even the clients were taking time off.  During the first couple of weeks, I spent about eight hours a day reading and watching videos, learning and taking exams.  I got Google Analytics certified, Google AdWords certified, and I took courses on Facebook Advertisement and Search Engine Optimization.
 
-Then, one day there was an unexpected report request, and in less than 6 hours I had to learn how to pull reports from [Appnexus](https://en.wikipedia.org/wiki/AppNexus), how to analyze and present the data using Excel.  I hadn't had time to review Appnexus documentation, and I hadn't touched Excel for five years.  Nothing like the thrill of running behind the clock to accelerate learning!
+Then, one day a client requested a report for that same day, and in less than six hours I had to learn how to pull data from [Appnexus](https://en.wikipedia.org/wiki/AppNexus), how to analyze it, and present my findings using Excel.  Until that moment, I hadn't had time to review Appnexus documentation, and I hadn't touched Excel for five years.  **Nothing like the thrill of running behind the clock to accelerate learning!**
 
 The next day I was asked to report on top performing creatives.  And the following day I was setting up events with Google Tag Manager, and creating Google Analytics dashboards for other clients.
 
 In the past three months, I became an expert at gathering and analyzing data, and preparing client-facing reports.
 
-I mastered the use of pivot tables in Excel.  I automated reports for clients using Google Data Studio.  I collaborated with my colleagues writing scripts that connect Google Data Studio to services such as Appnexus.  I re-learned how to use R for data analysis, and ggplot became my best friend when creating visualizations. I started moving my dashboards from Google Data Studio to R using the flexdashboards package and Shiny.
+I mastered the use of pivot tables in Excel.  I automated reports for clients using Google Data Studio.  I collaborated with my colleagues writing scripts that connect Google Data Studio to other data providers.  
+
+I re-learned how to use R for data analysis, and ggplot became my best friend when creating visualizations. I started moving my dashboards from Google Data Studio to R using the flexdashboards package and Shiny.
 
 I've worked with a wide variety of clients, from small-medium companies (Weleda, NJOY, BroadwayHD), to big ones (Scott's Miracle-Gro and IGS).
 
-And I'm continually learning new tricks both about data analytics and marketing.
+And I'm continually learning new tricks about both: data analytics and marketing.
 
 I am a lucky girl. I'm paid to do exactly what I love to do.  But guess what.  All those wonderful things I learned at work, all of them, they are a secret.  A secret kept between me and my brain.
 
@@ -55,6 +57,6 @@ My June [PDP](https://isaacmorehouse.com/2016/04/14/praxis-and-the-pdp/) is the 
 - Every day: Read one marketing/data analysis related article.  Take notes.  Explain what I've learned to a friend/colleague.
 - Every weekend: Publish a blog post summarizing learnings (or most significant learning) for the week.
 
-It's said that writing out goals makes them feel more tangible, more concrete. I agree. Cheers to mid-year resolutions!
+It's said that writing out goals makes them feel more tangible, more concrete. I agree. 
 
-
+Cheers to mid-year resolutions!
